2013-08-27  Sergio Martin <sergio.martin@artica.es>

	* include/styles/integria.css
	include/styles/calendar.css
	include/styles/flora/flora.theme.css
	include/functions_calendar.php
	include/functions_db.php
	operation/agenda/agenda.php
	operation/agenda/entry.php
	operation/user_report/report_annual.php
	operation/user_report/monthly.php
	images/note.png
	images/bell.png
	images/objects/id.png
	godmode/setup/incidents_setup.php: Change calendars styles

2013-08-27  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_inventory_detail.php: Fixed some style
	issues with table.
	* operation/incidents/incident_inventory_contacts.php: Now contact details
	appear in a dialog. 
	* include/js/integria_incident_search.js: New function to display contact
	details in a dialog.
	* include/functions_inventories.php: Fixed a style issue with inventory
	object table.

2013-08-27  Dario Rodriguez <dario@artica.es>

	* include/functions_config.php,
	godmode/setup/setup.php: Fixed a setup problem updating
	language.

2013-08-26  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_inventory_contacts.php: Fixed
	incident contacts section. 
	* operation/incidents/incident_detail.php: Fixed a bug
	validatign input on field "Notify changes by email", it
	should support several email addresses.

2013-08-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/styles/integria.css
	include/styles/wiki.css
	include/js/integria.js
	operation/invoices/invoice_detail.php
	operation/incidents/incident_tracking.php
	operation/incidents/incident_detail.php
	operation/incidents/incident_dashboard_detail.php
	operation/leads/lead_statistics.php
	operation/leads/template_manager.php
	operation/leads/lead_detail.php
	operation/kb/manage_perms.php
	operation/kb/manage_cat.php
	operation/kb/browse.php
	operation/contracts/contract_detail.php
	operation/users/user_spare_workunit.php
	operation/users/user_edit.php